--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     })
   })
 </script>
-<script src="./assets/javascript/script.js"></script>
+<script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
